html-structure and img-files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>NFT Page</title>
+    <title>NFT Page Light</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="navigation-wrap">
+                <div class="navigation-logo"></div>
+                <div class="navigation-list">
+                    <ul>
+                        <li class="navigation-item"><a href="#">Features</a></li>
+                        <li class="navigation-item"><a href="#">About</a></li>
+                        <li class="navigation-item"><a href="#">Launch</a></li>
+                        <li class="navigation-signup"><a href="#">Sign Up</a></li>
+                    </ul>
+                </div>
+                <div class="navigation-burger"></div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero-page">
+            <div class="container">
+                <div class="hero-page-wrapper">
+                    <div class="launch-date"><span>LAUNCHING SOON</span></div>
+                    <div class="page-title">
+                        <h1>An NFT like no other</h1>
+                    </div>
+                    <div class="page-text">
+                        <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
+                            live.</p>
+                    </div>
+                    <div class="main-button"><a href="#">Sign Up</a></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="call-to-action-page background1">
+            <div class="container">
+                <div class="CTA-wrapper">
+                    <div class="section-title">Free NFT for early birds</div>
+                    <div class="section-text">Sign up today and you’ll get a free NFT when we launch</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="partner-list-page">
+            <div class="container">
+                <div class="partner-list-wrapper">
+                    <ul>
+                        <li class="partner">
+                            <div class="partner-logo"></div>
+                            <div class="partner-name"><span>Boomerang</span></div>
+                        </li>
+                        <li class="partner">
+                            <div class="partner-logo"></div>
+                            <div class="partner-name"><span>Blimp</span></div>
+                        </li>
+                        <li class="partner">
+                            <div class="partner-logo"></div>
+                            <div class="partner-name"><span>qrco</span></div>
+                        </li>
+                        <li class="partner">
+                            <div class="partner-logo"></div>
+                            <div class="partner-name"><span>OpenDoor</span></div>
+                        </li>
+                        <li class="partner">
+                            <div class="partner-logo"></div>
+                            <div class="partner-name"><span>Droplet</span></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="product-list-page">
+            <div class="container">
+                <div class="product-list-wrapper">
+
+                    <div class="section-title-wrapper">
+                        <div class="section-title">LE Super Rare Auction</div>
+                        <div class="section-text">We have released four limited edition NFTs early which can be bid on
+                            via OpenSea.</div>
+                    </div>
+
+                    <div class="product-card-list">
+
+                        <div class="product-card">
+
+                            <div class="product-picture">
+                                <img src="" alt="">
+                            </div>
+
+                            <div class="product-description-wrap">
+                                <div class="product-description-name">
+                                    <div class="product-series"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name"><span>Purple Man</span></div>
+                                    <div class="product-number"><span>#12983</span></div>
+                                </div>
+                                <div class="product-description-cost">
+                                    <div class="product-bid"><span>TOP BID</span></div>
+                                    <div class="product-cost"><span>2.99 ETH</span></div>
+                                    <div class="product-timer"><span>1 day left</span></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product-card">
+
+                            <div class="product-picture">
+                                <img src="" alt="">
+                            </div>
+
+                            <div class="product-description-wrap">
+                                <div class="product-description-name">
+                                    <div class="product-series"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name"><span>Beige</span></div>
+                                    <div class="product-number"><span>#12983</span></div>
+                                </div>
+                                <div class="product-description-cost">
+                                    <div class="product-bid"><span>TOP BID</span></div>
+                                    <div class="product-cost"><span>2.99 ETH</span></div>
+                                    <div class="product-timer"><span>1 day left</span></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product-card">
+
+                            <div class="product-picture">
+                                <img src="" alt="">
+                            </div>
+
+                            <div class="product-description-wrap">
+                                <div class="product-description-name">
+                                    <div class="product-series"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name"><span>Red Man</span></div>
+                                    <div class="product-number"><span>#12983</span></div>
+                                </div>
+                                <div class="product-description-cost">
+                                    <div class="product-bid"><span>TOP BID</span></div>
+                                    <div class="product-cost"><span>2.99 ETH</span></div>
+                                    <div class="product-timer"><span>1 day left</span></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product-card">
+                            <div class="product-picture">
+                                <img src="" alt="">
+                            </div>
+
+                            <div class="product-description-wrap">
+                                <div class="product-description-name">
+                                    <div class="product-series"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name"><span>Green Man</span></div>
+                                    <div class="product-number"><span>#12983</span></div>
+                                </div>
+                                <div class="product-description-cost">
+                                    <div class="product-bid"><span>TOP BID</span></div>
+                                    <div class="product-cost"><span>2.99 ETH</span></div>
+                                    <div class="product-timer"><span>1 day left</span></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="hero-page">
+            <div class="container">
+                <div class="hero-page-wrapper">
+                    <div class="launch-date"><span>LAUNCHING SOON</span></div>
+                    <div class="page-title">
+                        <h2>An NFT like no other</h2>
+                    </div>
+                    <div class="page-text">
+                        <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
+                            live.</p>
+                    </div>
+                    <div class="main-button"><a href="#">Sign Up</a></div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer class="footer">
+        <div class="footer-main">
+            <div class="container">
+                <div class="footer-title">
+                    <div class="footer-logo"><img src="#" alt=""></div>
+                    <div class="footer-description"><span>Exclusive NFT Collection</span></div>
+                    <div class="footer-social-media">
+                        <ul>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt=""></li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-twitter.svg" alt=""></li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-instagram.svg" alt=""></li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-tiktok.svg" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-list">
+                    <div class="footer-list-wrap">
+                        <div class="footer-list-title"><span>ABOUT</span></div>
+                        <div class="footer-list-items">
+                            <ul>
+                                <li class="footer-list-item"><a href="#">About</a></li>
+                                <li class="footer-list-item"><a href="#">Terms</a></li>
+                                <li class="footer-list-item"><a href="#">Legal</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="footer-list-wrap">
+                        <div class="footer-list-title"><span>NFT</span></div>
+                        <div class="footer-list-items">
+                            <ul>
+                                <li class="footer-list-item"><a href="#">OpenSea</a></li>
+                                <li class="footer-list-item"><a href="#">Maker</a></li>
+                                <li class="footer-list-item"><a href="#">Learn</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-list-wrap">
+                        <div class="footer-list-title"><span>CONTACT</span></div>
+                        <div class="footer-list-items">
+                            <ul>
+                                <li class="footer-list-item"><a href="#">Press</a></li>
+                                <li class="footer-list-item"><a href="#">Support</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-list-wrap">
+                        <div class="footer-list-title"><span>SOCIAL</span></div>
+                        <div class="footer-list-items">
+                            <ul>
+                                <li class="footer-list-item"><a href="#">Twitter</a></li>
+                                <li class="footer-list-item"><a href="#">Instagram</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-legal">
+                    <div class="footer-copyright"><span>© Copyright 2022 NFTlanding</span></div>
+                    <div class="footer-copyright"><span>Launching August 2022</span></div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
