color-selectors/html changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>NFT Page Light</title>
 </head>
 
@@ -13,13 +13,13 @@
     <header class="header">
         <div class="container">
             <div class="navigation-wrap">
-                <div class="navigation-logo"></div>
+                <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
                 <div class="navigation-list">
                     <ul>
-                        <li class="navigation-item"><a href="#">Features</a></li>
-                        <li class="navigation-item"><a href="#">About</a></li>
-                        <li class="navigation-item"><a href="#">Launch</a></li>
-                        <li class="navigation-signup"><a href="#">Sign Up</a></li>
+                        <li class="navigation-item dark2"><a href="#">Features</a></li>
+                        <li class="navigation-item dark2"><a href="#">About</a></li>
+                        <li class="navigation-item dark2"><a href="#">Launch</a></li>
+                        <li class="navigation-signup pink"><a href="#">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="navigation-burger"></div>
@@ -31,11 +31,11 @@
         <section class="hero-page">
             <div class="container">
                 <div class="hero-page-wrapper">
-                    <div class="launch-date"><span>LAUNCHING SOON</span></div>
-                    <div class="page-title">
+                    <div class="launch-date pink"><span>LAUNCHING SOON</span></div>
+                    <div class="page-title dark1">
                         <h1>An NFT like no other</h1>
                     </div>
-                    <div class="page-text">
+                    <div class="page-text dark2">
                         <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
                             live.</p>
                     </div>
@@ -47,8 +47,8 @@
         <section class="call-to-action-page background1">
             <div class="container">
                 <div class="CTA-wrapper">
-                    <div class="section-title">Free NFT for early birds</div>
-                    <div class="section-text">Sign up today and you’ll get a free NFT when we launch</div>
+                    <div class="section-title dark1">Free NFT for early birds</div>
+                    <div class="section-text dark1">Sign up today and you’ll get a free NFT when we launch</div>
                 </div>
             </div>
         </section>
@@ -58,24 +58,24 @@
                 <div class="partner-list-wrapper">
                     <ul>
                         <li class="partner">
-                            <div class="partner-logo"></div>
-                            <div class="partner-name"><span>Boomerang</span></div>
+                            <div class="partner-logo dark4"></div>
+                            <div class="partner-name dark4"><span>Boomerang</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo"></div>
-                            <div class="partner-name"><span>Blimp</span></div>
+                            <div class="partner-logo dark4"></div>
+                            <div class="partner-name dark4"><span>Blimp</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo"></div>
-                            <div class="partner-name"><span>qrco</span></div>
+                            <div class="partner-logo dark4"></div>
+                            <div class="partner-name dark4"><span>qrco</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo"></div>
-                            <div class="partner-name"><span>OpenDoor</span></div>
+                            <div class="partner-logo dark4"></div>
+                            <div class="partner-name dark4"><span>OpenDoor</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo"></div>
-                            <div class="partner-name"><span>Droplet</span></div>
+                            <div class="partner-logo dark4"></div>
+                            <div class="partner-name dark4"><span>Droplet</span></div>
                         </li>
                     </ul>
                 </div>
@@ -87,8 +87,8 @@
                 <div class="product-list-wrapper">
 
                     <div class="section-title-wrapper">
-                        <div class="section-title">LE Super Rare Auction</div>
-                        <div class="section-text">We have released four limited edition NFTs early which can be bid on
+                        <div class="section-title dark1">LE Super Rare Auction</div>
+                        <div class="section-text dark2">We have released four limited edition NFTs early which can be bid on
                             via OpenSea.</div>
                     </div>
 
@@ -102,14 +102,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name"><span>Purple Man</span></div>
-                                    <div class="product-number"><span>#12983</span></div>
+                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span>Purple Man</span></div>
+                                    <div class="product-number dark3"><span>#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid"><span>TOP BID</span></div>
-                                    <div class="product-cost"><span>2.99 ETH</span></div>
-                                    <div class="product-timer"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span>TOP BID</span></div>
+                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span>1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -122,14 +122,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name"><span>Beige</span></div>
-                                    <div class="product-number"><span>#12983</span></div>
+                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span>Beige</span></div>
+                                    <div class="product-number dark3"><span>#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid"><span>TOP BID</span></div>
-                                    <div class="product-cost"><span>2.99 ETH</span></div>
-                                    <div class="product-timer"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span>TOP BID</span></div>
+                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span>1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -142,14 +142,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name"><span>Red Man</span></div>
-                                    <div class="product-number"><span>#12983</span></div>
+                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span>Red Man</span></div>
+                                    <div class="product-number dark3"><span>#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid"><span>TOP BID</span></div>
-                                    <div class="product-cost"><span>2.99 ETH</span></div>
-                                    <div class="product-timer"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span>TOP BID</span></div>
+                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span>1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -161,14 +161,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name"><span>Green Man</span></div>
-                                    <div class="product-number"><span>#12983</span></div>
+                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span>Green</span></div>
+                                    <div class="product-number dark3"><span>#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid"><span>TOP BID</span></div>
-                                    <div class="product-cost"><span>2.99 ETH</span></div>
-                                    <div class="product-timer"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span>TOP BID</span></div>
+                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span>1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -180,11 +180,11 @@
         <section class="hero-page">
             <div class="container">
                 <div class="hero-page-wrapper">
-                    <div class="launch-date"><span>LAUNCHING SOON</span></div>
-                    <div class="page-title">
+                    <div class="launch-date pink"><span>LAUNCHING SOON</span></div>
+                    <div class="page-title dark1">
                         <h2>An NFT like no other</h2>
                     </div>
-                    <div class="page-text">
+                    <div class="page-text dark2">
                         <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
                             live.</p>
                     </div>
@@ -194,13 +194,14 @@
         </section>
 
     </main>
+    
     <footer class="footer">
         <div class="footer-main">
             <div class="container">
                 <div class="footer-title">
-                    <div class="footer-logo"><img src="#" alt=""></div>
-                    <div class="footer-description"><span>Exclusive NFT Collection</span></div>
-                    <div class="footer-social-media">
+                    <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
+                    <div class="footer-description dark2"><span>Exclusive NFT Collection</span></div>
+                    <div class="footer-social-media dark4">
                         <ul>
                             <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt=""></li>
                             <li class="social-icon"><img src="./images/footer-social-icons/social-twitter.svg" alt=""></li>
@@ -211,7 +212,7 @@
                 </div>
                 <div class="footer-list">
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title"><span>ABOUT</span></div>
+                        <div class="footer-list-title dark2"><span>ABOUT</span></div>
                         <div class="footer-list-items">
                             <ul>
                                 <li class="footer-list-item"><a href="#">About</a></li>
@@ -222,38 +223,38 @@
                     </div>
 
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title"><span>NFT</span></div>
+                        <div class="footer-list-title dark2"><span>NFT</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item"><a href="#">OpenSea</a></li>
-                                <li class="footer-list-item"><a href="#">Maker</a></li>
-                                <li class="footer-list-item"><a href="#">Learn</a></li>
+                                <li class="footer-list-item dark2"><a href="#">OpenSea</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Maker</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Learn</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title"><span>CONTACT</span></div>
+                        <div class="footer-list-title dark2"><span>CONTACT</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item"><a href="#">Press</a></li>
-                                <li class="footer-list-item"><a href="#">Support</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Press</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Support</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title"><span>SOCIAL</span></div>
+                        <div class="footer-list-title dark2"><span>SOCIAL</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item"><a href="#">Twitter</a></li>
-                                <li class="footer-list-item"><a href="#">Instagram</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Twitter</a></li>
+                                <li class="footer-list-item dark2"><a href="#">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="footer-legal">
-                    <div class="footer-copyright"><span>© Copyright 2022 NFTlanding</span></div>
-                    <div class="footer-copyright"><span>Launching August 2022</span></div>
+                    <div class="footer-copyright dark4"><span>© Copyright 2022 NFTlanding</span></div>
+                    <div class="footer-copyright dark4"><span>Launching August 2022</span></div>
                 </div>
             </div>
         </div>
