--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                         <li class="navigation-item dark2"><a href="#">Features</a></li>
                         <li class="navigation-item dark2"><a href="#">About</a></li>
                         <li class="navigation-item dark2"><a href="#">Launch</a></li>
-                        <li class="navigation-signup pink"><a href="#">Sign Up</a></li>
+                        <li class="navigation-signup pink"><a class="header-button" href="#">Sign Up</a></li>
                     </ul>
                 </div>
-                <div class="navigation-burger"></div>
+                <div class="navigation-burger"><img src="./images/logo-pictures/burger.svg" alt=""></div>
             </div>
         </div>
     </header>
@@ -30,25 +30,25 @@
     <main>
         <section class="hero-page">
             <div class="container">
-                <div class="hero-page-wrapper">
-                    <div class="launch-date pink"><span>LAUNCHING SOON</span></div>
+                <div class="hero-page-wrapper background-image-1">
+                    <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                     <div class="page-title dark1">
-                        <h1>An NFT like no other</h1>
+                        <h1 class="page-title-style-h1">An NFT like no other</h1>
                     </div>
                     <div class="page-text dark2">
-                        <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
+                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
                             live.</p>
                     </div>
-                    <div class="main-button"><a href="#">Sign Up</a></div>
+                    <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                 </div>
             </div>
         </section>
 
-        <section class="call-to-action-page background1">
+        <section class="call-to-action-page ">
             <div class="container">
-                <div class="CTA-wrapper">
-                    <div class="section-title dark1">Free NFT for early birds</div>
-                    <div class="section-text dark1">Sign up today and you’ll get a free NFT when we launch</div>
+                <div class="CTA-wrapper background-color-fill">
+                    <div class="section-title dark1"><span class="section-title-style">Free NFT for early birds</span></div>
+                    <div class="section-text dark1"><p class="section-text-style">Sign up today and you’ll get a free NFT when we launch</p></div>
                 </div>
             </div>
         </section>
@@ -59,23 +59,23 @@
                     <ul>
                         <li class="partner">
                             <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span>Boomerang</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">Boomerang</span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span>Blimp</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">Blimp</span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span>qrco</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">qrco</span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span>OpenDoor</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">OpenDoor</span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span>Droplet</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">Droplet</span></div>
                         </li>
                     </ul>
                 </div>
@@ -87,8 +87,8 @@
                 <div class="product-list-wrapper">
 
                     <div class="section-title-wrapper">
-                        <div class="section-title dark1">LE Super Rare Auction</div>
-                        <div class="section-text dark2">We have released four limited edition NFTs early which can be bid on
+                        <div class="section-title dark1"><span class="section-title-style">LE Super Rare Auction</span></div>
+                        <div class="section-text dark2"><p class="section-text-style">We have released four limited edition NFTs early which can be bid on</p>
                             via OpenSea.</div>
                     </div>
 
@@ -102,14 +102,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span>Purple Man</span></div>
-                                    <div class="product-number dark3"><span>#12983</span></div>
+                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span class="product-name-style">Purple Man</span></div>
+                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span>TOP BID</span></div>
-                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
+                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -122,14 +122,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span>Beige</span></div>
-                                    <div class="product-number dark3"><span>#12983</span></div>
+                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span class="product-name-style">Beige</span></div>
+                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span>TOP BID</span></div>
-                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
+                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -142,14 +142,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span>Red Man</span></div>
-                                    <div class="product-number dark3"><span>#12983</span></div>
+                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span class="product-name-style">Red Man</span></div>
+                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span>TOP BID</span></div>
-                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
+                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -161,14 +161,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span>GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span>Green</span></div>
-                                    <div class="product-number dark3"><span>#12983</span></div>
+                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1"><span class="product-name-style">Green</span></div>
+                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span>TOP BID</span></div>
-                                    <div class="product-cost dark1"><span>2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span>1 day left</span></div>
+                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
+                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
+                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -179,22 +179,22 @@
 
         <section class="hero-page">
             <div class="container">
-                <div class="hero-page-wrapper">
-                    <div class="launch-date pink"><span>LAUNCHING SOON</span></div>
+                <div class="hero-page-wrapper background-image-2">
+                    <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                     <div class="page-title dark1">
-                        <h2>An NFT like no other</h2>
+                        <h1 class="page-title-style-h1">An NFT like no other</h1>
                     </div>
                     <div class="page-text dark2">
-                        <p>Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
+                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
                             live.</p>
                     </div>
-                    <div class="main-button"><a href="#">Sign Up</a></div>
+                    <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                 </div>
             </div>
         </section>
 
     </main>
-    
+
     <footer class="footer">
         <div class="footer-main">
             <div class="container">
