--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
                 <div class="partner-list-wrapper">
                     <ul>
                         <li class="partner">
-                            <div class="partner-logo dark4"></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">Boomerang</span></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-boomerang.svg" alt=""></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">Boom<span class="hide-mobile-part">erang</span></span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-blimp.svg" alt="" ></div>
                             <div class="partner-name dark4"><span class="partner-name-style">Blimp</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-qrco.svg" alt="" ></div>
                             <div class="partner-name dark4"><span class="partner-name-style">qrco</span></div>
                         </li>
-                        <li class="partner">
-                            <div class="partner-logo dark4"></div>
+                        <li class="partner hide-mobile-part">
+                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-opendoor.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">OpenDoor</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-droplet.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">Droplet</span></div>
                         </li>
                     </ul>
@@ -88,8 +88,7 @@
 
                     <div class="section-title-wrapper">
                         <div class="section-title dark1"><span class="section-title-style">LE Super Rare Auction</span></div>
-                        <div class="section-text dark2"><p class="section-text-style">We have released four limited edition NFTs early which can be bid on</p>
-                            via OpenSea.</div>
+                        <div class="section-text dark2"><p class="section-text-style">We have released four limited edition NFTs early which can be bid on via <span class="via-link">OpenSea.</span></p></div>
                     </div>
 
                     <div class="product-card-list">
@@ -97,7 +96,7 @@
                         <div class="product-card">
 
                             <div class="product-picture">
-                                <img src="" alt="">
+                                <img src="./images/card-list-pictures/purple-man-card.svg" alt="">
                             </div>
 
                             <div class="product-description-wrap">
@@ -117,7 +116,7 @@
                         <div class="product-card">
 
                             <div class="product-picture">
-                                <img src="" alt="">
+                                <img src="./images/card-list-pictures/beige-woman-card.svg" alt="">
                             </div>
 
                             <div class="product-description-wrap">
@@ -137,7 +136,7 @@
                         <div class="product-card">
 
                             <div class="product-picture">
-                                <img src="" alt="">
+                                <img src="./images/card-list-pictures/red-man-card.svg" alt="">
                             </div>
 
                             <div class="product-description-wrap">
@@ -156,7 +155,7 @@
 
                         <div class="product-card">
                             <div class="product-picture">
-                                <img src="" alt="">
+                                <img src="./images/card-list-pictures/green-woman-card.svg" alt="">
                             </div>
 
                             <div class="product-description-wrap">
