checkpoint: font-sizes and paddings

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </section>
 
         <section class="call-to-action-page ">
-            <div class="container">
-                <div class="CTA-wrapper background-color-fill">
+            <div class="container background-color-fill">
+                <div class="CTA-wrapper">
                     <div class="section-title dark1"><span class="section-title-style">Free NFT for early birds</span></div>
                     <div class="section-text dark1"><p class="section-text-style">Sign up today and you’ll get a free NFT when we launch</p></div>
                 </div>
@@ -101,14 +101,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span class="product-name-style">Purple Man</span></div>
-                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Purple Man</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
-                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -121,14 +121,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span class="product-name-style">Beige</span></div>
-                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Beige</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
-                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -141,14 +141,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span class="product-name-style">Red Man</span></div>
-                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Red Man</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
-                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -160,14 +160,14 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange"><span class="product-series-style">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1"><span class="product-name-style">Green</span></div>
-                                    <div class="product-number dark3"><span class="product-number-style">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Green</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3"><span class="prduct-bid-style">TOP BID</span></div>
-                                    <div class="product-cost dark1"><span class="product-cost-style">2.99 ETH</span></div>
-                                    <div class="product-timer dark3"><span class="product-timer-style">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
