checkpoint-more of before

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
 
     <main>
-        <section class="hero-page">
+        <section class="hero-page background-image-1">
             <div class="container">
-                <div class="hero-page-wrapper background-image-1">
+                <div class="hero-page-wrapper ">
                     <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                     <div class="page-title dark1">
                         <h1 class="page-title-style-h1">An NFT like no other</h1>
